Bonus Question answer with changes

--- a/HP_Employee_Salaries-passwordremoved.ipynb
+++ b/HP_Employee_Salaries-passwordremoved.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#vCreate an engine to communicate with the database"
+    "#Create an engine to communicate with the database"
    ]
   },
   {
